deploy file changed

--- a/templates/blog/comment_form.html
+++ b/templates/blog/comment_form.html
@@ -1,15 +1,5 @@
-{% extends 'base.html' %}
-
-{% block content %}
-<h2>Add a Comment</h2>
-
-<form method="post">
+<form method="post" action="{% url 'comment-add' post.pk %}">
     {% csrf_token %}
-
     {{ form.as_p }}
-
-    <button type="submit">Post Comment</button>
+    <button type="submit">Comment</button>
 </form>
-
-<a href="{% url 'post-list' %}">← Back to Posts</a>
-{% endblock %}
