--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,11 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <title>Blog Website</title>
-
+    <link rel="icon" href="{% static 'blog/favicon.ico' %}">
     <style>
         body {
             font-family: Arial, sans-serif;
